# vacature_scraping

./: .env  .gitignore  README.md  pyproject.toml
src/: _main.py  get_vacature_description.py  integration_chatgpt.py  scraping.py
voorbeeld_excel/: BrightStone Group_Shortlist functies en skills per opdrachtgever.xlsx  Vacatures bij banken en FinTechs _ Banken.nl.html  vacatures_banken_nl_eindbestand - kopie.xlsx  vacatures_banken_nl_eindbestand.xlsx  ~$vacatures_banken_nl_eindbestand.xlsx
voorbeeld_excel/Vacatures bij banken en FinTechs _ Banken.nl_files/: banken.css  cat-icons.css  default.css  filter-panel.css  filterPopup.js.downloaden  filters.js.downloaden  greedy-nav.css  header-scripts.js.downloaden  header-with-dropdown.css  header.css  header.js.downloaden  js  js(1)  list.js.downloaden  loadScripts.js.downloaden  newsletter.js.downloaden  search.js.downloaden  searchPopup.css  semantic-adapter.css  semantic-common.css  style.css
